--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+target/debug/.fingerprint/hello_world-0c3f555ef12a3dc5/bin-hello_world
+.project
