--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 
 name = "hello_world"
 version = "0.0.1"
-authors = [ "Your name <you@example.com>" ]
+authors = [ "Wesley Woo <wesley_woo@yeah.com>" ]
 
 [[bin]]
 
